Change Wither Skeletons Mine Ingredient Item Model

--- a/src/main/resources/assets/bugmine/lang/en_us.json
+++ b/src/main/resources/assets/bugmine/lang/en_us.json
@@ -30,6 +30,8 @@
   "bugmine.options.preventSoulLinkCrash.description": "No longer crash upon taking damage with soul link active.",
   "bugmine.options.rabbitsSpawnsRabbits.name": "Rabbits Spawns Rabbits",
   "bugmine.options.rabbitsSpawnsRabbits.description": "Makes the \"Rabbits\" mine ingredient spawn rabbits instead of parrots.",
+  "bugmine.options.witherSkeletonsNotZombifiedPiglins.name": "Wither Skeletons Not Zombified Piglins",
+  "bugmine.options.witherSkeletonsNotZombifiedPiglins.description": "Change the icon for the Wither Skeleton mine ingredient to a Wither Skeleton Spawn Egg, not a Zombified Piglin Spawn Egg.",
   "bugmine.advancements.unlocks.in_it_together.description": "Complete a mine with the 'Soul Link' effect active",
   "unlocks.player.locked": "🔒 %s locked %s",
   "world.effect.locked": "Locked new Mine Ingredient: %s"
